New Sample implementing the latest SDK (v.2.2)

--- a/mobPartnerPublisherSDKSample/res/layout/activity_mobpartner_example.xml
+++ b/mobPartnerPublisherSDKSample/res/layout/activity_mobpartner_example.xml
@@ -107,8 +107,7 @@
 	        <com.mobpartner.android.publisher.views.MobPartnerAdBanner
 			    android:id="@+id/bannerdisplay"
 			    android:layout_width="fill_parent"
-			    android:layout_height="wrap_content"
-			    android:background="#999999" />         
+			    android:layout_height="wrap_content"/>         
         
     	</LinearLayout>
             
