--- a/mobPartnerPublisherSDKSample/res/layout/activity_mobpartner_example.xml
+++ b/mobPartnerPublisherSDKSample/res/layout/activity_mobpartner_example.xml
@@ -7,124 +7,230 @@
         android:background="#000000"
         android:orientation="vertical" >
         
-         <LinearLayout 
-	        android:layout_width="fill_parent"
-	        android:layout_height="210dp"
-	        android:gravity="bottom">
+        <ScrollView      
+	    android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:background="#000000">
+        
+	        <LinearLayout 
+	            android:orientation="vertical"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content">
 	        
-	        <com.mobpartner.android.publisher.views.MobPartnerMobWidget    	
-		        android:layout_marginLeft="10dp"
-		        android:layout_marginRight="10dp"
-		        android:layout_width="match_parent"
-		        android:layout_height="wrap_content"
-			    mobpartner:poolId="3809"/>         
-        
-    	</LinearLayout>
-        
-        <LinearLayout 
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:orientation="horizontal"
-	        android:gravity="center_vertical|center_horizontal"
-	        android:layout_marginTop="10dp">    
-	        
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:paddingRight="10dp"
-                android:textColor="#FFFFFF"
-                android:text="@string/PoolID" />
-
-            <EditText
-                android:id="@+id/editText1"
-                android:layout_width="90dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:text="@string/demoPool"
-                android:textColor="#FFFFFF"
-                android:inputType="number" >
-
-                <requestFocus />
-            </EditText>
-                
-        </LinearLayout>
-            
-         
-                    
-        
-        <LinearLayout 
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:orientation="vertical"
-	        android:gravity="top">
-        
-	        <Button
-	            android:id="@+id/button1"
-			    android:layout_width="fill_parent"
-			    android:layout_height="wrap_content"
-			    android:textSize="18sp"
-			    android:textColor="#FFFFFF"
-			    android:layout_marginLeft="80dp"
-			    android:layout_marginRight="80dp"
-			    android:onClick="interstitialShow"
-			    android:text="@string/interstitial_show" />         
-			    
-	     	<Button
-	            android:id="@+id/button2"
-			    android:layout_width="fill_parent"
-			    android:layout_height="wrap_content"
-			    android:textSize="18sp"
-			    android:textColor="#FFFFFF"
-			    android:layout_marginLeft="80dp"
-			    android:layout_marginRight="80dp"
-			    android:onClick="showBanner"
-			    android:text="@string/show_banner" />     
-			    
-	     	<Button
-	            android:id="@+id/button3"
-			    android:layout_width="fill_parent"
-			    android:layout_height="wrap_content"
-			    android:textSize="18sp"
-			    android:textColor="#FFFFFF"
-			    android:layout_marginLeft="80dp"
-			    android:layout_marginRight="80dp"
-			    android:onClick="showMobStream"
-			    android:text="@string/show_mobstream" /> 
-			    
-	     	<Button
-	            android:id="@+id/button4"
-			    android:layout_width="fill_parent"
-			    android:layout_height="wrap_content"
-			    android:textSize="18sp"
-			    android:textColor="#FFFFFF"
-			    android:layout_marginLeft="80dp"
-			    android:layout_marginRight="80dp"
-			    android:onClick="mobwallShow"
-			    android:text="@string/mobWall" /> 
-			    
-		</LinearLayout>
-		    
-        <LinearLayout 
-	        android:layout_width="fill_parent"
-	        android:layout_height="0dp"
-	        android:layout_weight="1"
-	        android:orientation="vertical"
-	        android:gravity="bottom">
-	        
-	        <com.mobpartner.android.publisher.views.MobPartnerAdBanner
-			    android:id="@+id/banner"
-			    android:layout_width="match_parent"
-			    android:layout_height="wrap_content"
-			    android:visibility="gone"/>         
-			    
-	        <com.mobpartner.android.publisher.views.MobPartnerMobStream
-			    android:id="@+id/mobstream"
-			    android:layout_width="match_parent"
-			    android:layout_height="wrap_content"
-			    android:visibility="gone"/>   
-        
-    	</LinearLayout>
+		        <LinearLayout 
+			        android:layout_width="fill_parent"
+			        android:layout_height="210dp"
+			        android:gravity="bottom">
+			        
+			        <com.mobpartner.android.publisher.views.MobPartnerMobWidget  
+			            android:id="@+id/mobwidget"  	
+				        android:layout_marginLeft="10dp"
+				        android:layout_marginRight="10dp"
+				        android:layout_width="match_parent"
+				        android:layout_height="wrap_content"/>         
+		        
+		    	</LinearLayout>
+		        
+		        <LinearLayout 
+			        android:layout_width="fill_parent"
+			        android:layout_height="wrap_content"
+			        android:orientation="horizontal"
+			        android:gravity="center_vertical|center_horizontal"
+			        android:layout_marginTop="10dp">    
+			        
+		            <TextView
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:textSize="20sp"
+		                android:paddingRight="10dp"
+		                android:textColor="#FFFFFF"
+		                android:text="@string/PoolID" />
+		
+		            <EditText
+		                android:id="@+id/editText1"
+		                android:layout_width="90dp"
+		                android:layout_height="wrap_content"
+		                android:ems="10"
+		                android:text="@string/demoPool"
+		                android:textColor="#FFFFFF"
+		                android:inputType="number" >
+		
+		                <requestFocus />
+		            </EditText>
+		                
+		        </LinearLayout>
+		            
+		         
+		                    
+		        
+		        <LinearLayout 
+			        android:layout_width="fill_parent"
+			        android:layout_height="wrap_content"
+			        android:orientation="vertical"
+			        android:gravity="top">
+		        
+		            <Button
+			            android:id="@+id/button0"
+			            android:layout_width="fill_parent"
+					    android:layout_height="wrap_content"
+					    android:textSize="18sp"
+					    android:textColor="#FFFFFF"
+					    android:layout_marginLeft="80dp"
+					    android:layout_marginRight="80dp"
+					    android:onClick="showMobWidget"
+					    android:text="@string/mobwidget_show" />
+		            
+			        <Button
+			            android:id="@+id/button1"
+					    android:layout_width="fill_parent"
+					    android:layout_height="wrap_content"
+					    android:textSize="18sp"
+					    android:textColor="#FFFFFF"
+					    android:layout_marginLeft="80dp"
+					    android:layout_marginRight="80dp"
+					    android:onClick="interstitialShow"
+					    android:text="@string/interstitial_show" />         
+					    
+			     	<Button
+			            android:id="@+id/button2"
+					    android:layout_width="fill_parent"
+					    android:layout_height="wrap_content"
+					    android:textSize="18sp"
+					    android:textColor="#FFFFFF"
+					    android:layout_marginLeft="80dp"
+					    android:layout_marginRight="80dp"
+					    android:onClick="showBanner"
+					    android:text="@string/show_banner" />     
+					    
+			     	<Button
+			            android:id="@+id/button3"
+					    android:layout_width="fill_parent"
+					    android:layout_height="wrap_content"
+					    android:textSize="18sp"
+					    android:textColor="#FFFFFF"
+					    android:layout_marginLeft="80dp"
+					    android:layout_marginRight="80dp"
+					    android:onClick="showMobStream"
+					    android:text="@string/show_mobstream" /> 
+					    
+			     	<Button
+			            android:id="@+id/button4"
+					    android:layout_width="fill_parent"
+					    android:layout_height="wrap_content"
+					    android:textSize="18sp"
+					    android:textColor="#FFFFFF"
+					    android:layout_marginLeft="80dp"
+					    android:layout_marginRight="80dp"
+					    android:onClick="mobwallShow"
+					    android:text="@string/mobWall" /> 
+					    
+				</LinearLayout>
+				    
+		        <LinearLayout 
+			        android:layout_width="fill_parent"
+			        android:layout_height="0dp"
+			        android:layout_weight="1"
+			        android:orientation="vertical"			 
+			        android:layout_marginTop="10dp"   
+			        android:gravity="bottom">
+			        
+			        <com.mobpartner.android.publisher.views.MobPartnerAdBanner
+					    android:id="@+id/banner"
+					    android:layout_width="match_parent"
+					    android:layout_height="wrap_content"
+					    android:visibility="gone"/>         
+					
+			        <LinearLayout 
+			            android:id="@+id/mobstream_layout"
+				        android:layout_width="match_parent"
+				        android:layout_height="wrap_content"
+				        android:orientation="vertical"  
+				        android:gravity="center_horizontal"
+				        android:visibility="gone">
+		                
+				        <TextView
+			                android:layout_width="wrap_content"
+			                android:layout_height="match_parent"
+			                android:layout_marginTop="10dp"
+			                android:layout_marginBottom="5dp"
+			                android:textSize="20sp"
+			                android:paddingRight="10dp"
+			                android:textColor="#FFFFFF"
+			                android:text="MobStream - 4x1" />
+				        
+				        <com.mobpartner.android.publisher.views.MobPartnerMobStream
+						    android:id="@+id/mobstream1"
+					        android:layout_width="match_parent"
+					        android:layout_height="100dp"/>   
+						    
+				       <TextView
+			                android:layout_width="wrap_content"
+			                android:layout_height="match_parent"
+			                android:layout_marginTop="10dp"
+			                android:layout_marginBottom="5dp"
+			                android:textSize="20sp"
+			                android:paddingRight="10dp"
+			                android:textColor="#FFFFFF"
+			                android:text="MobStream - 4x2" />
+						    
+				        <com.mobpartner.android.publisher.views.MobPartnerMobStream
+						    android:id="@+id/mobstream2"
+						    android:layout_width="match_parent"
+						    android:layout_height="200dp"/>   
+						    
+				        <TextView
+			                android:layout_width="wrap_content"
+			                android:layout_height="match_parent"
+			                android:layout_marginTop="10dp"
+			                android:layout_marginBottom="5dp"
+			                android:textSize="20sp"
+			                android:paddingRight="10dp"
+			                android:textColor="#FFFFFF"
+			                android:text="MobStream - 4x3" />
+				        
+				        <com.mobpartner.android.publisher.views.MobPartnerMobStream
+						    android:id="@+id/mobstream3"
+						    android:layout_width="match_parent"
+						    android:layout_height="300dp"/>  
+						    
+				        <TextView
+			                android:layout_width="wrap_content"
+			                android:layout_height="match_parent"
+			                android:layout_marginTop="10dp"
+			                android:layout_marginBottom="5dp"
+			                android:textSize="20sp"
+			                android:paddingRight="10dp"
+			                android:textColor="#FFFFFF"
+			                android:text="MobStream - 2x2" />
+						    
+				        <com.mobpartner.android.publisher.views.MobPartnerMobStream
+						    android:id="@+id/mobstream4"
+						    android:layout_width="200dp"
+						    android:layout_height="200dp"/> 
+						    
+				        <TextView
+			                android:layout_width="wrap_content"
+			                android:layout_height="match_parent"
+			                android:layout_marginTop="10dp"
+			                android:layout_marginBottom="5dp"
+			                android:textSize="20sp"
+			                android:paddingRight="10dp"
+			                android:textColor="#FFFFFF"
+			                android:text="MobStream - 2x3" />
+						    
+				        <com.mobpartner.android.publisher.views.MobPartnerMobStream
+						    android:id="@+id/mobstream5"
+						    android:layout_width="200dp"
+						    android:layout_height="300dp"
+						    android:layout_marginBottom="10dp"/>   
+		         
+	    	
+			        </LinearLayout>
+		    	</LinearLayout>
+	    	
+	        </LinearLayout>
+    	
+        </ScrollView>
             
     </LinearLayout>
     
